<resources>
    <string name="app_name">MyAppData</string>
    <string name="title_login">Login MyAppData</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="title_dashboard">Dashboard Data Mahasiswa</string>
    <string name="hint_nim">NIM</string>
    <string name="hint_nama">Nama</string>
    <string name="hint_prodi">Program Studi</string>
    <string name="hint_kelas">Kelas</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_email">Email</string>
    <string name="btn_tambah_data">Tambah Data</string>
    <string name="btn_logout">Logout</string>
</resources>